@@ -1,3 +1,8 @@
+Mon Jul 13 17:21:53 BST 2009  Tom Mortimer <tom@flax.co.uk>
+
+    * flax/searchserver/backends/xappy_backend.py,
+    * flax/searchserver/application.py: Added metadata resource.
+
 Wed Jul 01 08:00:13 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
 
 	* flax/searchserver/jstemplates.py: Remove unneeded import.
